# datatoolkit

./: .readthedocs.yaml  404.html  CITATION.cff  Dockerfile  Dockerfile.base  Makefile  README.md  datatoolkit.code-workspace  debian-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build-pipy.yml  ci.yml  docker-publish.yml  new_release.yml  test_code.yml
datatoolkit/: __init__.py  cross_validation.py  eda.py  mock_dataset.py  model_selection.py  test_eda.py  utils.py  visualization.py
docs/: genindex.html  hypothesis.html  index.html  index.md  mock_dataset.html  model_selection.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html  visualization.html  visualize.html
docs/_sources/: hypothesis.rst.txt  mock_dataset.rst.txt  utils.rst.txt  visualize.rst.txt
docs/doctrees/: environment.pickle  hypothesis.doctree  index.doctree  mock_dataset.doctree  model_selection.doctree  utils.doctree  visualization.doctree  visualize.doctree
docs/reference/: eda.md  reference.md
docs/source/: api.rst  conf.py  index.rst  visualization.rst
docs/src/: conf.py  index.rst  model_selection.rst
explanation/: index.html
hot-to-guides/: index.html
notebooks/: hyperopt_cross_validation.ipynb  sklearn_cost_function.ipynb
reference/eda/: index.html
reference/reference/: index.html
tests/: test_eda.py  test_mock_dataset.py  test_utils.py
tutorials/: index.html
