[tool.poetry]
name = "explatory_data_analysis"
version = "0.0.1"
description = ""
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.2"
pandas = "^1.3.3"
Deprecated = "^1.2.13"
typeguard = "^2.12.1"
bokeh = "^2.4.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"
pytest = "^6.2.5"
rope = "^0.20.1"
bumpversion = "^0.6.0"
twine = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
